# wlanpi-webui

./: .gitignore  ARCHITECTURE.md  AUTHORS.rst  CERTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.build  LICENSE  MANIFEST.in  PACKAGING.md  README.md  TROUBLESHOOTING.md  build-package-native.sh  dev.sh  extras.txt  pyproject.toml  requirements.in  requirements.txt  setup.py  setup.sh  tox.ini  wlanpi-speedtest.conf  wlanpi-webui.conf  wlanpi_webui.drawio  wsgi.py
.github/workflows/: build-and-archive-debian-package.yml  build-debian-package.yml  codeql-analysis.yml  deploy-debian-package.yml  deploy-to-gemfury.yml  deploy-to-packagecloud.yml  recover-secrets.yml
debian/: changelog  changelog.dch  control  debhelper-build-stamp  manpage.md  manpage.sh  postinst  postrm  rules  wlanpi-webui.1  wlanpi-webui.1.md  wlanpi-webui.install  wlanpi-webui.links  wlanpi-webui.manpages  wlanpi-webui.prerm.debhelper  wlanpi-webui.service  wlanpi-webui.socket
deployment/: DEPLOYMENT.md  TROUBLESHOOTING.md  armbian-customize-image-webui.sh  pi-gen.md  run.sh
deployment/apache2/: DEPLOYMENT.md  wsgi.py
deployment/legacy-apache2/: setup.sh
deployment/legacy-tests/: test_php.sh
deployment/nginx/: nginx.conf  wlanpi_speedtest.conf
deployment/php/: php.ini
deployment/systemd/: wlanpi_webui.service  wlanpi_webui.socket
deployment/wlanpi/: customize-image-webui.sh
etc/nginx/: fixpermissions.sh  link.sh  nginx.conf  unlink.sh  wlanpi_webui.conf
install/etc/cockpit/: cockpit.conf
install/etc/grafana/: grafana.ini
install/etc/kismet/: kismet_httpd.conf
install/etc/nginx/: fixpermissions.sh  link.sh  nginx.conf  unlink.sh  wlanpi_librespeed.conf  wlanpi_webui.conf
install/var/www/librespeed/: librespeed_detailed.html  librespeed_detailed_base.js  librespeed_simple.html  speedtest.html  speedtest_worker.js
install/var/www/librespeed/alternate/: speedtest.html  speedtest_base.js  speedtest_worker.js  style.css
scripts/: reachability.sh
speedtest/src/: speedtest.html  speedtest.js  speedtest_worker.js
speedtest/src/wip/: speedtest.html  speedtest_base.js  speedtest_worker.js  style.css
tests/: test_app.py  test_utils.py
wlanpi-webui/: __init__.py  __main__.py  __version__.py
wlanpi-webui/network/: network.py
wlanpi-webui/speedtest/: speedtest.py
wlanpi-webui/templates/: error.html  fpms.html  profiler.html  speedtest.html
wlanpi-webui/templates/errors/: 500.html
wlanpi-webui/templates/public/: speedtest.html
wlanpi_webui/: __init__.py  __main__.py  __version__.py  app.py  config.py  utils.py  wsgi.py
wlanpi_webui/about/: __init__.py  about.py
wlanpi_webui/cockpit/: __init__.py  cockpit.py
wlanpi_webui/errors/: __init__.py  handlers.py
wlanpi_webui/fpms/: __init__.py  networkinfo.py
wlanpi_webui/grafana/: __init__.py  grafana.py
wlanpi_webui/homepage/: __init__.py  homepage.py
wlanpi_webui/kismet/: __init__.py  kismet.py
wlanpi_webui/librespeed/: __init__.py  librespeed.py
wlanpi_webui/network/: __init__.py  network.py  network_info.py  network_setup.py
wlanpi_webui/profiler/: __init__.py  profiler.py
wlanpi_webui/speedtest/: __init__.py  speedtest.py
wlanpi_webui/static/css/: app.css  normalize.css  uikit-rtl.css  uikit-rtl.min.css  uikit.css  uikit.min.css
wlanpi_webui/static/js/: _hyperscript.min.js  htmx.min.js  uikit-icons.js  uikit-icons.min.js  uikit.js  uikit.min.js
wlanpi_webui/stream/: __init__.py  stream.py
wlanpi_webui/templates/: base.html  layout.html  netscan_iframe.html
wlanpi_webui/templates/errors/: 404.html  405.html  418.html  500.html
wlanpi_webui/templates/extends/: about.html  iframe.html  network.html  network_setup.html  profiler.html  service.html
wlanpi_webui/templates/partials/: about.html  network.html  network_setup.html  service.html
wlanpi_webui/templates/public/: about.html  about_partial.html  base.html  home.html  iframe.html  iframe_partial.html  layout.html  librespeed.html  network.html  network_partial.html  networkinfo.html  partial_about.html  partial_iframe.html  partial_network.html  partial_profiler.html  partial_service.html  profiler.html  profiler_partial.html  service.html
